fix search result on mobile & tablet (#247)
* fix search result on mobile & tablet

* fix

* more media

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,7 +659,7 @@ a:focus {
         top: -2px;
         margin-left: 5px; }
   .header-nav--mobile {
-    width: 224px;
+    min-width: 230px;
     height: 100%;
     padding: 20px;
     position: fixed;
@@ -683,6 +683,7 @@ a:focus {
     .header-nav--mobile .header__search {
       display: block;
       width: 184px;
+      margin-right: 0;
       margin-bottom: 15px; }
     .header-nav--mobile > ul > li {
       margin-bottom: 15px; }
@@ -1667,62 +1668,81 @@ body {
 
 /** Blog Search **/
 
-  .aa-input-container {
-    display: inline-block;
-    position: relative;
-  }
-  .aa-input-search {
-    width: 300px;
-    padding: 12px 28px 12px 12px;
-    border: 1px solid #e4e4e4;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
-  .aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button,
-  .aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
-      display: none;
-  }
-  .aa-input-icon {
-    height: 16px;
-    width: 16px;
-    position: absolute;
-    top: 50%;
-    right: 16px;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-    fill: #e4e4e4;
-    pointer-events: none;
-  }
-  .aa-dropdown-menu {
-    background-color: #fff;
-    border: 1px solid rgba(228, 228, 228, 0.6);
-    width: 300px;
-    margin-top: 10px;
-    box-sizing: border-box;
-  }
-  .aa-suggestion {
-    padding: 6px 12px;
-    cursor: pointer;
-  }
-  .aa-suggestions-category {
-    border-bottom: 1px solid rgba(228, 228, 228, 0.6);
-    border-top: 1px solid rgba(228, 228, 228, 0.6);
-    padding: 6px 12px;
-  }
-  .aa-dropdown-menu > div {
-    display: inline-block; 
-    width: 100%; 
-    vertical-align: top; 
-    color: #000;
-  }
-  .aa-empty {
-    padding: 6px 12px;
-  }
+.aa-input-container {
+  display: inline-block;
+  position: relative;
+}
+.aa-input-search {
+  width: 300px;
+  padding: 12px 28px 12px 12px;
+  border: 1px solid #e4e4e4;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button,
+.aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
+    display: none;
+}
+.aa-input-icon {
+  height: 16px;
+  width: 16px;
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  fill: #e4e4e4;
+  pointer-events: none;
+}
+.aa-dropdown-menu {
+  background-color: #fff;
+  border: 1px solid rgba(228, 228, 228, 0.6);
+  width: 100%;
+  box-sizing: border-box;
+}
+.aa-suggestion {
+  padding: 6px 12px;
+  cursor: pointer;
+}
+.aa-suggestions-category {
+  border-bottom: 1px solid rgba(228, 228, 228, 0.6);
+  border-top: 1px solid rgba(228, 228, 228, 0.6);
+  padding: 6px 12px;
+}
+.aa-dropdown-menu > div {
+  display: inline-block;
+  width: 100%;
+  vertical-align: top;
+  color: #000;
+}
+.aa-empty {
+  padding: 6px 12px;
+}
   
 .hidden {
   overflow: hidden; }
+
+@media (min-width: 768px) {
+  .aa-dropdown-menu {
+    width: 180px;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 1023px) {
+  .aa-dropdown-menu {
+    width: 280px;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 1439px) {
+  .aa-dropdown-menu {
+    width: 300px;
+  }
+}
 
 @supports (-webkit-overflow-scrolling: touch) {
   body {
